# minikube-app

./: .gitignore  Dockerfile  Makefile  README.md  app.tf  argocd-app.yaml  base.tf  deployment.tf  docker-compose.yml  example-grafana-dashboard.json  locustfile.py  minio.tf  monitoring.tf  pyproject.toml  redis.tf
helm-pubg/: Chart.yaml  values.yaml
helm-pubg/templates/: app.yaml  cronjob.yaml  serviceaccount.yaml  sync.yaml
helm_config/redis/: values.yaml.tpl
pubg/: config.py
pubg/api/: config.py  main.py  minio_cache.py  models.py  redis_cache.py  router.py
pubg/jobs/: __main__.py  config.py  get_season_data.py  write_minio.py
tests/: conftest.py  test_api_route_validators.py
