[tool.poetry]
name = "minikube-app"
version = "0.1.0"
description = ""
authors = ["wmaucla <williammaucla@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
minio = "^7.2.5"
redis = "^5.0.3"
pydantic = "^2.6.4"
pydantic-settings = "^2.2.1"
tenacity = "^8.2.3"
gunicorn = "^21.2.0"
uvicorn = "^0.29.0"
fastapi = "^0.110.0"
cachetools = "^5.3.3"
prometheus-fastapi-instrumentator = "^7.0.0"
locust = "^2.24.1"


[tool.poetry.group.dev.dependencies]
black = ">=23.10,<25.0"
ruff = "^0.3.4"
jupyter = "^1.0.0"
ipykernel = "^6.29.4"
pytest = "^8.1.1"
mypy = "^1.9.0"
types-requests = "^2.31.0.20240311"
types-cachetools = "^5.3.0.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.ruff]
lint.select = [
    "E",     # pycodestyle
    "F",     # pyflakes
    "I",     # isort
    "A",     # flake8-builtins
    "ASYNC", # flake8-async
    "C4",    # flake8-comprehensions
    # flake8-bandit
    "S102",
    "S110",
    "S112",
    "S301",
    "S324",
    "S501",
    "S506",
    # pylint refactor
    "PLR5501",
    # pylint error
    "PLE1142",
    # pylint convention
    "PLC1901",
    "C901",
    "SIM108",
    "SIM110",
    "SIM115",
    ## docstrings
    "D300",
    "D402",
    "D417",
    "D418",
    "D419",
]
lint.ignore = ["A003"] #, "DTZ005", "DTZ011"]

# Allow autofix for all enabled rules (when `--fix`) is provided.
lint.fixable = [
    "A",
    "B",
    "C",
    "D",
    "E",
    "F",
    "G",
    "I",
    "N",
    "Q",
    "S",
    "T",
    "W",
    "ANN",
    "ARG",
    "BLE",
    "COM",
    "DJ",
    "DTZ",
    "EM",
    "ERA",
    "EXE",
    "FBT",
    "ICN",
    "INP",
    "ISC",
    "NPY",
    "PD",
    "PGH",
    "PIE",
    "PL",
    "PT",
    "PTH",
    "PYI",
    "RET",
    "RSE",
    "RUF",
    "SIM",
    "SLF",
    "TCH",
    "TID",
    "TRY",
    "UP",
    "YTT",
]
# Allow ruff to use unstable rules and fixes
preview = true

lint.unfixable = []

exclude = []

# Same as Black.
line-length = 120

[tool.mypy]
ignore_missing_imports = true